# technopark_C-Cpp_individual_task_1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: master.yml
project/cmd/: main.c
project/include/: matrix.h  task.h
project/src/: main.c  matrix.c
project/src/matrix_lib/: matrix.c
project/src/task/: task.c
project/tests/: test_calloc.cpp  test_fscanf_fprint.cpp  test_load_upload.cpp  test_multiply.cpp  test_multiply_matrices.cpp
project/tests/input_emulator/load_upload/: erange
project/tests/input_emulator/load_upload/load/: 1x7  2x2  5x1  7x6
project/tests/input_emulator/multiply/: invalid_args
project/tests/input_emulator/multiply/2x2_x_2x4/: fexp
project/tests/input_emulator/multiply/2x2_x_2x7/: fin
project/tests/input_emulator/multiply/5x6_x_6x7/: fexp  fin
project/tests/input_emulator/multiply_matrices/2x2_x_2x4/: fin
project/tests/input_emulator/multiply_matrices/2x2_x_2x7/: fexp
